--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,48 @@ header{
   background-color: lightcoral;
   border: 1px solid black;
 }
+
+.container{
+  max-width: 1180px;
+  margin: 0 auto;
+  background-color: lightgray;
+  /*altezza da togliere*/
+  height: 1000px;
+}
+
+.riquadro{
+  display: flex;
+  max-width: 1180px;
+  margin: 0 auto;
+  background-color: aquamarine;
+  /*altezza da togliere*/
+  height: 400px;
+  margin-bottom: 10px;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.mini-riquadro{
+  max-width: 1180px;
+  margin: 0 auto;
+  background-color: lightgreen;
+  /*altezza da togliere*/
+  height: 200px;
+  margin-bottom: 10px;
+}
+
+.immagine{
+  width: 500px;
+  height: 300px;
+  background-color: brown;
+
+  
+}
+
+.testo{
+  width: 500px;
+  height: 300px;
+  background-color: orange;
+  
+}
+
