--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ header{
   margin: 0 auto;
   background-color: lightgray;
   /*altezza da togliere*/
-  height: 1000px;
+  height: 2000px;
 }
 
 .riquadro{
@@ -64,20 +64,35 @@ header{
   /*altezza da togliere*/
   height: 200px;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .immagine{
   width: 500px;
   height: 300px;
   background-color: brown;
-
-  
 }
 
 .testo{
   width: 500px;
   height: 300px;
   background-color: orange;
-  
 }
+
+.quadro4{
+  background-color: brown;
+}
+
+footer{
+  background-color: black;
+  height: 500px;
+}
+
+.liste{
+  max-width: 1180px;
+  margin: 0 auto;
+  background-color: lightsalmon;
+  height: 400px;
+}
+
 
