--- a/css/style.css
+++ b/css/style.css
@@ -85,14 +85,38 @@ header{
 
 footer{
   background-color: black;
-  height: 500px;
+  height: 800px;
 }
 
 .liste{
+  display: flex;
+  justify-content: space-between;
   max-width: 1180px;
-  margin: 0 auto;
   background-color: lightsalmon;
   height: 400px;
+  margin: 0 auto;
+  border-bottom: 5px solid yellow;
 }
+
+.piede{
+  display: flex;
+  justify-content: space-between;
+  max-width: 1180px;
+  height: 80px;
+  background-color: black;
+  border: 2px solid white;
+  margin: 0 auto;
+  color: white;
+}
+
+.colonne-liste{
+  width: 180px;
+  height: 200px;
+  background-color: greenyellow;
+  margin: 20px 20px;
+
+}
+
+
 
 
